<resources>
    <string name="app_name">Quizzes</string>
    <string name="title_activity_core">CoreActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="from">from</string>
    <string name="company_name">BettoucheCode</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="by_creating_an_account_you_agree_on">By creating an account, you agree on our</string>
    <string name="register_now">Register now</string>
    <string name="new_here">New here?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="login_failed">Login failed</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered?</string>
    <string name="username">Username</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="insufficient_password">Password must contain more than 7 characters</string>
    <string name="register_failed">Registering failed</string>
    <string name="insufficient_username">Username must contain more than 4 characters</string>
    <string name="username_taken">Username taken</string>
    <string name="interests">Interests</string>
    <string name="finish">finish</string>
    <string name="name">Name</string>
    <string name="set_up_profile">Set up Profile</string>
    <string name="unspecified_interests">Unspecified interests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="error">Error</string>
    <string name="edit">Edit</string>
    <string name="describe_the_quiz_for_you_network">Describe the quiz for you network...</string>
    <string name="post">Post</string>
    <string name="posted">Posted!</string>
    <string name="unspecified_description" type="id">Description must be specified</string>
    <string name="unspecified_choices" type="id">All choices must be specified</string>
    <string name="interests_unincluded" type="id">Interests must be included</string>
    <string name="my_quizzes">My Quizzes</string>
    <string name="dislikes">Dislikes</string>
    <string name="likes">Likes</string>
    <string name="_0_likes">0 Likes</string>
    <string name="_0_dislikes">0 Dislikes</string>
    <string name="quizzes">Quizzes</string>
    <string name="bio">Bio</string>
    <string name="menu_timeline">Timeline</string>
    <string name="menu_top">Top</string>
    <string name="title_profile">Profile</string>
    <string name="title_timeline">Timeline</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow_back">Follow back</string>
    <string name="score">Score</string>
    <string name="already_answered">(Already Answered)</string>
    <string name="hardness">Hardness</string>
    <string name="expected_hardness">Expected Hardness</string>
    <string name="unspecified_hardness">Unspecified Hardness</string>
    <string name="no_bookmarks_yet">No bookmarks yet</string>
    <string name="title_following">Following</string>
    <string name="no_followers">No followers</string>
    <string name="no_following">No following</string>
    <string name="more">More</string>
    <string name="view_picture">View Picture</string>
    <string name="upload_a_new_picture">Upload a new Picture</string>
    <string name="delete">Delete</string>
</resources>
