<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/parentLayout"
    android:layout_marginBottom="50dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photoIV"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:src="@drawable/ic_account_circle_grey"
            app:civ_border_color="#ffffff"
            app:civ_border_width="2dp"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_person"/>
            <EditText
                android:visibility="gone"
                android:id="@+id/usernameET"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="40dp"
                android:text="@string/username"
                android:textSize="14sp"
                android:textColor="#000000"
                android:background="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/usernameTV"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="40dp"
                android:text="@string/username"
                android:textSize="14sp"
                android:textColor="#000000"
                android:background="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>

            <ImageView
                android:id="@+id/editUsernameIV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:src="@drawable/ic_edit" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_bio"/>
            <EditText
                android:visibility="gone"
                android:id="@+id/bioET"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="40dp"
                android:text="@string/username"
                android:textSize="14sp"
                android:textColor="#000000"
                android:background="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/bioTV"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="40dp"
                android:text="@string/bio"
                android:textSize="14sp"
                android:textColor="#000000"
                android:background="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>

            <ImageView
                android:id="@+id/editBioIV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:src="@drawable/ic_edit" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_email"/>
            <TextView
                android:id="@+id/emailTV"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_score"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:id="@+id/scoreTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="14sp"
                    android:textColor="#000000"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/myQuizzesLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_logo_24p"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="40dp"
                android:text="@string/my_quizzes"
                android:textSize="14sp"
                android:textColor="#000000"
                android:background="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bookmarkLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_bookmark_special"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="40dp"
                android:text="Bookmark"
                android:textSize="14sp"
                android:textColor="#000000"
                android:background="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@drawable/white_background_border"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_interests"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="40dp"
                android:text="@string/interests"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"/>
            <ImageView
                android:id="@+id/editInterestsIV"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_edit"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userInterestsRV"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="150dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/allInterestsRV"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="150dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="vertical"
            android:background="@drawable/white_background_border"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/signOutTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textColor="#ff0000"
            android:layout_gravity="center"/>
    </LinearLayout>
    </ScrollView>
    <TextView
        android:visibility="gone"
        android:id="@+id/errorTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:background="#ff0000"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="5dp"/>
</RelativeLayout>